--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.21.1",
